Style buttons on all pages

--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -13,9 +13,8 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">FAQs</h2>
+            <div class="col mt-5">
+                <h2 class="logo-font mb-4 mt-lg-5">FAQs</h2>
                 <hr>
                 <p><em>Can't find an answer to your question? Give us a call on 01782 555 123, email us at 
                     doublewhammyguitars@gmail.com or visit our <a href="{% url 'contact' %}">Contact Us</a> page.</em>
