--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,7 +3,7 @@
 <div class="collapse navbar-collapse d-lg-flex justify-content-between" id="main-nav">
     <ul class="navbar-nav">
         <li class="nav-item dropdown text-white">
-            <a class="logo-font font-weight-bold nav-link mr-5 text-white" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link mr-5 text-white hover" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
@@ -15,7 +15,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 hover" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Guitars
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="guitars-link">
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="amps-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 hover" href="#" id="amps-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Amps
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="amps-link">
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="pedals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5 hover" href="#" id="pedals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Pedals
             </a>
             <div class="dropdown-menu border-0 scrollable-dropdown bg-dark" aria-labelledby="pedals-link">
@@ -69,7 +69,7 @@
         </li>
 
         <li class="nav-item dropdown bg-dark">
-            <a class="logo-font font-weight-bold nav-link text-white" href="#" id="accessories-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="#" id="accessories-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Accessories
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="accessories-link">
@@ -82,17 +82,17 @@
     </ul>
     <ul class="list-unstyled d-lg-flex my-1 col-4 justify-content-end services-links">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'faqs' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'faqs' %}" id="specials-link">
                 FAQs
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'contact' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'contact' %}" id="specials-link">
                 Contact
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'newsletter' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'newsletter' %}" id="specials-link">
                 Newsletter
             </a>
         </li>
