--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -18,9 +18,8 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row ">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Checkout</h2>
+            <div class="col mt-5">
+                <h2 class="logo-font mb-4 mt-lg-5">Checkout</h2>
                 <hr>
             </div>
         </div>
