--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -13,9 +13,8 @@
     <div class="overlay"></div>
         <div class="container">                
             <div class="row">
-                <div class="col-12 col-md-6">
-                    <hr>
-                    <h2 class="logo-font mb-4">Contact Us</h2>
+                <div class="col-12 col-md-6 mt-5">
+                    <h2 class="logo-font mb-4 mt-lg-5">Contact Us</h2>
                     <hr>
                     <form method="POST" action="{% url 'contact' %}" class="form mb-2" enctype="multipart/form-data">
                         {% csrf_token %}
