--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -14,15 +14,14 @@
         <div class="container">                
             {% if request.user.is_superuser %}
                 <div class="row">
-                    <div class="col">
-                        <hr>
-                        <h2 class="logo-font mb-4">Add FAQ</h2>
+                    <div class="col mt-5">
+                        <h2 class="logo-font mb-4 mt-lg-5">Add FAQ</h2>
                         <hr>
                         <form method="POST" action="{% url 'edit_faq' faq.id %}" class="form mb-2" enctype="multipart/form-data">
                             {% csrf_token %}
                                 {{ form | crispy }}
                             <div class="text-right">
-                                <a class="btn btn-outline-black " href="{% url 'faqs' %}">Cancel</a>
+                                <a class="btn btn-dark" href="{% url 'faqs' %}">Cancel</a>
                                 <button class="btn btn-orange " type="submit">Save Changes</button>
                             </div>
                         </form>
