--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,9 +13,8 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
+            <div class="col-12 col-md-6 mt-5">
+                <h2 class="logo-font mb-4 mt-lg-5">Product Management</h2>
                 <h5 class="text-muted">Add a Product</h5>
                 <hr>
             </div>
