--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-5">
-                <h2 class="logo-font">Products</h2>
+                <h2 class="logo-font mt-lg-5">Products</h2>
                 {% for s in current_subcategories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?subcategory={{ s.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ s.friendly_name }}</span>
