--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -17,9 +17,8 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
+            <div class="col mt-lg-5">
+                <h2 class="logo-font mb-4 mt-5">My Profile</h2>
                 <hr>
             </div>
         </div>
