--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,8 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
+<h2 class="logo-font mb-4 mt-lg-5">{% trans "Sign Out" %}</h2>
 <hr>
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
@@ -15,8 +14,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a class="btn btn-outline-black " href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <a class="btn btn-dark text-white" href="{% url 'home' %}">Cancel</a>
+  <button type="submit" class="btn-orange">{% trans 'Sign Out' %}</button>
 </form>
 
 
