--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,14 +5,13 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font mb-4 mt-lg-5">{% trans "Change Password" %}</h2>
     <hr>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn btn-outline-black " href="{% url 'account_login' %}">Back to Login</a>
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <a class="btn btn-dark text-white" href="{% url 'account_login' %}">Back to Login</a>
+        <button type="submit" name="action" class="btn-orange">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
