--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,8 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <h2 class="logo-font mb-4 mt-lg-5">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
     <hr>
 
     {% if token_fail %}
@@ -16,8 +15,8 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <a class="btn btn-outline-black " href="{% url 'account_login' %}">Back to Login</a>
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                <a class="btn btn-dark text-white" href="{% url 'account_login' %}">Back to Login</a>
+                <input class="btn-orange" type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
