--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,8 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
+<h2 class="logo-font mb-4 mt-lg-5">{% trans "Sign Up" %}</h2>
 <hr>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
@@ -17,8 +16,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="btn btn-outline-black " href="{% url 'account_login' %}">Back to Login</a>
-  <button type="submit">{% trans "Sign Up" %}</button>
+  <a class="btn btn-dark text-white" href="{% url 'account_login' %}">Back to Login</a>
+  <button class="btn-orange" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
