Add home link to medium screens & below

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -34,3 +34,9 @@
   .guitar-detail>img {
     height: 60vh;
   }
+
+  select#sort-selector {
+    background: orangered;
+    border-radius: 5px;
+    color: white;
+}
