--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,6 +2,11 @@
 
 <div class="collapse navbar-collapse d-lg-flex justify-content-between" id="main-nav">
     <ul class="navbar-nav">
+        <li class="nav-item dropdown text-white d-lg-none">
+            <a class="logo-font font-weight-bold nav-link mr-5 text-white hover" href="{% url 'home' %}" id="home-link" aria-haspopup="true" aria-expanded="false">
+                Home
+            </a>
+        </li>
         <li class="nav-item dropdown text-white">
             <a class="logo-font font-weight-bold nav-link mr-5 text-white hover" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Products
