--- a/templates/404.html
+++ b/templates/404.html
@@ -13,14 +13,14 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-6 mt-5">
-                <h2 class="logo-font mb-4 mt-lg-5 text-center">404 - Total String Outage</h2>
-                <h5 class="text-muted">404 - Total String Outage</h5>
+            <div class="col-12 text-center justify-content-center">
+                <h2 class="logo-font mb-4 mt-lg-5">404 - Total String Outage</h2>
                 <hr>
                 <p>Looks like you hit a bum note! This page is as lost as a guitar pick under the couch.</p>
 
                 <p>At <strong>Double Whammy Guitars</strong>, we hit high notes — but this one? Definitely flat.</p>
 
+                <p>Here's a few things you can try:</p>
                 <ul>
                 <li>Head back to the <a href="{% url 'home' %}">main stage</a>.</li>
                 <li>Check out our collection of <a href="{% url 'products' %}">Axes & AXE-essories</a>.</li>
