--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12 text-center justify-content-center">
+            <div class="col-12 mt-5">
                 <h2 class="logo-font mb-4 mt-lg-5">404 - Total String Outage</h2>
                 <hr>
                 <p>Looks like you hit a bum note! This page is as lost as a guitar pick under the couch.</p>
