Add sent_on field to contact model

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -14,8 +14,8 @@
     <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row my-3 pt-lg-5">
-            <div class="col">
-                <h2 class="logo-font mb-4 my-lg-3">Shopping Bag</h2>
+            <div class="col mt-5">
+                <h2 class="logo-font mb-4 my-lg-3 mt-lg-5">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
