--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -11,17 +11,17 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col mt-5">
-                <h2 class="logo-font mb-4 mt-lg-5">FAQs</h2>
-                <hr>
-                <p><em>Can't find an answer to your question? Give us a call on 01782 555 123, email us at 
-                    doublewhammyguitars@gmail.com or visit our <a href="{% url 'contact' %}">Contact Us</a> page.</em>
-                </p>
-                <hr>
+        <div class="container">
+            <div class="row">
+                <div class="col mt-5">
+                    <h2 class="logo-font mb-4 mt-lg-5">FAQs</h2>
+                    <hr>
+                    <p><em>Can't find an answer to your question? Give us a call on 01782 555 123, email us at 
+                        doublewhammyguitars@gmail.com or visit our <a href="{% url 'contact' %}">Contact Us</a> page.</em>
+                    </p>
+                    <hr>
+                </div>
             </div>
-        </div>
 
         <div class="row">
             <div class="col">
@@ -32,8 +32,8 @@
                     <div class="row"><div class="col-12"><small><strong>Updated On: </strong>{{ faq.updated_on }}</small></div></div>
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
-                            <a href="{% url 'edit_faq' faq.id %}">Edit</a> |
-                            <a class="text-danger" href="{% url 'delete_faq' faq.id %}">Delete</a>
+                            <a class="btn-primary btn-admin" href="{% url 'edit_faq' faq.id %}">Edit</a>
+                            <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-faq_id="{{ faq.id }}">Delete</a>
                         </small>
                     {% endif %}
                 <hr>
@@ -54,8 +54,35 @@
                             </div>
                         </form>
                     </div>      
-                </div>  
-            {% endif %}       
+                </div>
+            {% endif %}    
+            <!-- Delete confirmation modal -->
+            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel">Delete FAQ Entry?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this FAQ entry? This action cannot be
+                            undone.
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" aria-label="close" class="btn btn-dark" data-dismiss="modal">
+                                Close
+                            </button>
+                            <a id="deleteConfirm" aria-label="confirm" href="#" class="btn btn-danger" data-dismiss="modal">Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>   
         </div>
-    </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script src="{% static 'js/faqs.js' %}"></script>
 {% endblock %}
