--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,8 +51,8 @@
                     {% endif %}
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
-                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a class="btn-primary btn-admin" href="{% url 'edit_product' product.id %}">Edit</a>
+                        <a class="btn-danger btn-admin" href="{% url 'delete_product' product.id %}">Delete</a>
                     </small>
                 {% endif %}
                 <h3 class="my-3">Product Description</h3>
