--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,7 +52,7 @@
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
                         <a class="btn-primary btn-admin" href="{% url 'edit_product' product.id %}">Edit</a>
-                        <a class="btn-danger btn-admin" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-product_id="{{ product.id }}">Delete</a>
                     </small>
                 {% endif %}
                 <h3 class="my-3">Product Description</h3>
@@ -101,10 +101,34 @@
             </div>
         </div>
     </div>
+    <!-- Delete confirmation modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">Delete Product?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this product? This action cannot be
+                    undone.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" aria-label="close" class="btn btn-dark" data-dismiss="modal">
+                        Close
+                    </button>
+                    <a id="deleteConfirm" aria-label="confirm" href="#" class="btn btn-danger">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+<script src="{% static 'products/js/products.js' %}"></script>
 {% endblock %}
