--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'products\css\products.css' %}">
+<link rel="stylesheet" href="{% static 'products/css/products.css' %}">
 {% endblock %}
 
 {% block page_header %}
@@ -95,7 +95,7 @@
                                                 {% if request.user.is_superuser %}
                                                     <small class="ml-3">
                                                         <a class="btn-primary btn-admin" href="{% url 'edit_product' product.id %}">Edit</a>
-                                                        <a class="btn-danger btn-admin" href="{% url 'delete_product' product.id %}">Delete</a>
+                                                        <a class="btn-danger btn-admin delete-btn" aria-label="delete" data-product_id="{{ product.id }}">Delete</a>
                                                     </small>
                                                 {% endif %}
                                         </div>
@@ -127,6 +127,29 @@
                 </div>
             </div>
         </div>
+        <!-- Delete confirmation modal -->
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Delete Product?</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this product? This action cannot be
+                        undone.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" aria-label="close" class="btn btn-dark" data-dismiss="modal">
+                            Close
+                        </button>
+                        <a id="deleteConfirm" aria-label="confirm" href="#" class="btn btn-danger">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="btt-button shadow-sm rounded-0 border border-black">
         <a class="btt-link d-flex h-100">
@@ -137,28 +160,7 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-	</script>
-    
-    <script type="text/javascript">
-        $('#sort-selector').change(function() {
-            var selector = $(this);
-            var currentUrl = new URL(window.location);
-            var selectedVal = selector.val();
-            if(selectedVal != "reset"){
-                var sort = selectedVal.split("_")[0];
-                var direction = selectedVal.split("_")[1];
-                currentUrl.searchParams.set("sort", sort);
-                currentUrl.searchParams.set("direction", direction);
-                window.location.replace(currentUrl);
-            } else {
-                currentUrl.searchParams.delete("sort");
-                currentUrl.searchParams.delete("direction");
-                window.location.replace(currentUrl);
-            }
-        })
-    </script>
+    <script src="{% static 'products/js/products.js' %}"></script>
+    <script src="{% static 'products/js/sorting.js' %}"></script>
+
 {% endblock %}
