--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -32,8 +32,8 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-right">
-                        <a class="btn btn-outline-black " href="{% url 'products' %}">Cancel</a>
+                    <div class="text-right mt-3">
+                        <a class="btn btn-dark text-white" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-orange " type="submit">Update Product</button>
                     </div>
                 </form>
