--- a/static/css/base.css
+++ b/static/css/base.css
@@ -209,6 +209,13 @@ input[name='q']::placeholder {
     border: #000 solid 1px;
     padding: 1px 2px;
     border-radius: 2px; 
+    cursor: pointer;
+}
+
+.btn-admin:hover {
+    border: #000 solid 1px;
+    text-decoration: none;
+    color: #555;
 }
 
 a:not([href]){
