--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -32,7 +32,7 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black " href="{% url 'products' %}">Cancel</a>
+                        <a class="btn btn-dark text-white" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-orange " type="submit">Add Product</button>
                     </div>
                 </form>
