--- a/templates/base.html
+++ b/templates/base.html
@@ -180,6 +180,17 @@
   {% block content %}
   {% endblock %}
 
+  <footer class="container-fluid">
+    <div class="row bg-dark pt-lg-2 d-flex bg-dark">
+        <div class="col-12 d-flex justify-content-center align-items-center">
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook text-orange"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram text-orange"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-square-youtube text-orange"></i></a>
+            <a href="https://x.com/" target="_blank"><i class="fa-brands fa-square-x-twitter text-orange"></i></a>
+        </div>
+    </div>
+  </footer>
+
   {% block postloadjs %}
 
     <script type="text/javascript">
