--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,12 +10,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container h-100 h-100-36">
         <div class="row h-100">
             <div class="col-12 my-auto text-center logo-container">
                 <img src="{% static 'images/logo.jpg' %}" alt="double-whammy-guitar-logo" class="home-logo">
             </div>
-                <div class="my-5 ml-3">
+                <div class="ml-3">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
                     </h4>
