--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -31,7 +31,7 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-right">
+                    <div class="text-right mt-3">
                         <a class="btn btn-dark text-white" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-orange " type="submit">Add Product</button>
                     </div>
