--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,8 @@
   {% block content %}
   {% endblock %}
 
-  <footer class="container-fluid">
+  <div class="spacer"></div>
+  <footer class="container-fluid fixed-bottom">
     <div class="row bg-dark pt-lg-2 d-flex bg-dark">
         <div class="col-12 d-flex justify-content-center align-items-center">
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook text-orange"></i></a>
