Update features section of README & change checkout loading animation

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -137,7 +137,7 @@
     <div id="loading-overlay">
         <h1 class="text-light logo-font loading-spinner">
             <span class="icon">
-                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+                <img src="{% static 'images/loading.gif' %}" alt="guitar-loading-animation">
             </span>
         </h1>
     </div>
