--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -87,17 +87,17 @@
     </ul>
     <ul class="list-unstyled d-lg-flex my-1 col-4 justify-content-end services-links">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'faqs' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'faqs' %}">
                 FAQs
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'contact' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'contact' %}">
                 Contact
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'newsletter' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white hover" href="{% url 'newsletter' %}">
                 Newsletter
             </a>
         </li>
