--- a/templates/base.html
+++ b/templates/base.html
@@ -123,13 +123,15 @@
       </div>
     </div>
     <div class="row bg-dark">
-      <nav class="navbar navbar-expand-lg navbar-light w-100" id="product-nav">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+      <nav class="w-100">
+        <ul class="navbar navbar-expand-lg navbar-light w-100" id="product-nav">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
-        {% include 'includes/mobile-top-header.html' %}
-        {% include 'includes/main-nav.html' %}
+          </button>
+          {% include 'includes/mobile-top-header.html' %}
+          {% include 'includes/main-nav.html' %}
+        </ul>
       </nav>
     </div>
     <div class="row bg-dark justify-content-center search-bar-sm">
