--- a/templates/base.html
+++ b/templates/base.html
@@ -124,11 +124,13 @@
     </div>
     <div class="row bg-dark">
       <nav class="w-100">
-        <ul class="navbar navbar-expand-lg navbar-light w-100" id="product-nav">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
-          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
+        <ul class="navbar navbar-expand-lg navbar-light w-100 list-unstyled" id="product-nav">
+          <li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+            aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+          </li>
           {% include 'includes/mobile-top-header.html' %}
           {% include 'includes/main-nav.html' %}
         </ul>
