Apply top spacer to all screen sizes

--- a/templates/base.html
+++ b/templates/base.html
@@ -186,7 +186,7 @@
   {% block content %}
   {% endblock %}
 
-  <div class="spacer"></div>
+  <div class="bottom-spacer"></div>
   <footer class="container-fluid fixed-bottom">
     <div class="row bg-dark pt-lg-2 d-flex bg-dark">
         <div class="col-12 d-flex justify-content-center align-items-center">
