--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,6 +58,10 @@ h4, h5, h6 {
     box-shadow: #000 0px 5px 14px 4px;
 }
 
+.top-spacer {
+    height: 30px;
+}
+
 /* Body --------------------------------------------------*/
 
 .shop-now-button {
@@ -102,7 +106,7 @@ h4, h5, h6 {
 /* Footer --------------------------------------------------*/
 
 /* Prevents footer overlapping content at bottom of page */
-.spacer {
+.bottom-spacer {
     height: 50px;
 }
 
@@ -463,10 +467,6 @@ a:not([href]){
     .hover:hover {
         background-color: orangered;
         border-radius: 5px;
-    }
-
-    .top-spacer {
-        height: 30px;
     }
 
 }
