--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -15,7 +15,7 @@
             {% if request.user.is_superuser %}
                 <div class="row">
                     <div class="col mt-5">
-                        <h2 class="logo-font mb-4 mt-lg-5">Add FAQ</h2>
+                        <h2 class="logo-font mb-4 mt-lg-5">Edit FAQ</h2>
                         <hr>
                         <form method="POST" action="{% url 'edit_faq' faq.id %}" class="form mb-2" enctype="multipart/form-data">
                             {% csrf_token %}
