Update defensive section of TESTING & add link to admin panel

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -222,6 +222,10 @@ input[name='q']::placeholder {
     color: white;
 }
 
+.admin-controls {
+    color: orangered;
+}
+
 /* Controls --------------------------------------------------*/
 
 .increment-qty, .decrement-qty {
